Fixed an overflow issue and fixed it so that average number above the bar chart is correct based on what data is shows

--- a/front-end/src/components/resultsComponent/resultsComponent.css
+++ b/front-end/src/components/resultsComponent/resultsComponent.css
@@ -26,7 +26,7 @@
     justify-content: center;
     align-items: center;
     width: 50%;
-    height: 70vh;
+    height: 90%;
 }
 
 .results-graph-btn-row {
